--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "debug": "^2.6.8",
     "ejs": "^2.5.2",
     "express": "^4.15.3",
-    "express-ejs-layouts": "^2.3.0",
+    "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.15.3",
     "express-validator": "^3.1.3",
     "fs-extra": "^0.28.0",
@@ -39,7 +39,7 @@
     "multer": "^1.1.0",
     "numeral": "^1.5.3",
     "redis": "^2.7.1",
-    "request": "^2.87.0",
+    "request": "^2.88.0",
     "sendgrid": "^4.9.0",
     "serve-favicon": "^2.4.3",
     "underscore": "^1.8.3",
@@ -53,7 +53,7 @@
     "@types/cookie-parser": "^1.3.30",
     "@types/cors": "^2.8.1",
     "@types/debug": "0.0.29",
-    "@types/express": "^4.0.35",
+    "@types/express": "^4.16.0",
     "@types/express-partials": "0.0.30",
     "@types/fs-extra": "0.0.37",
     "@types/helmet": "0.0.34",
@@ -61,8 +61,8 @@
     "@types/jquery": "^2.0.45",
     "@types/log4js": "0.0.32",
     "@types/mime": "0.0.29",
-    "@types/mocha": "^2.2.41",
-    "@types/moment-timezone": "^0.5.7",
+    "@types/mocha": "^5.2.5",
+    "@types/moment-timezone": "^0.5.8",
     "@types/multer": "0.0.33",
     "@types/numeral": "0.0.19",
     "@types/redis": "^0.12.36",
@@ -70,19 +70,19 @@
     "@types/sendgrid": "^2.0.31",
     "@types/serve-favicon": "^2.2.28",
     "@types/supertest": "^2.0.0",
-    "@types/underscore": "^1.8.0",
+    "@types/underscore": "^1.8.9",
     "@types/validator": "^6.2.0",
     "ink-docstrap": "^1.3.0",
-    "jsdoc": "^3.4.3",
-    "mocha": "^3.4.1",
-    "node-sass": "^4.5.3",
-    "nsp": "^2.6.3",
+    "jsdoc": "^3.5.5",
+    "mocha": "^5.2.0",
+    "node-sass": "^4.9.3",
+    "nsp": "^3.2.1",
     "rimraf": "^2.6.1",
-    "snyk": "^1.30.1",
+    "snyk": "^1.92.7",
     "supertest": "^3.0.0",
-    "tslint": "^5.2.0",
-    "tslint-microsoft-contrib": "^5.0.0",
-    "typescript": "^2.3.3"
+    "tslint": "^5.11.0",
+    "tslint-microsoft-contrib": "^5.2.0",
+    "typescript": "^3.0.1"
   },
   "engines": {
     "node": ">=6.9.1",
@@ -98,13 +98,12 @@
     "build": "tsc",
     "check": "npm run tslint && nsp check",
     "clean": "rimraf ./dst ./docs ./coverage \"npm-debug.log*\" ./.nyc_output",
-    "jsdoc": "node_modules/.bin/jsdoc -c jsdoc.json",
-    "mocha": "mocha --no-timeouts --recursive",
-    "snyk": "snyk auth && snyk test --ignore-policy",
+    "doc": "jsdoc -c jsdoc.json",
+    "mocha": "mocha",
     "start": "node dst/server.js",
     "test": "npm run check",
-    "tslint": "tslint --type-check --project tsconfig.json -c tslint.json server.ts app/**/*.ts test/**/*.ts",
-    "preversion": "npm run clean && npm run build && npm test",
+    "tslint": "tslint --project tsconfig.json -c tslint.json --exclude \"**/*.spec.ts\" \"src/**/*.ts\"",
+    "preversion": "npm run clean && npm run build && npm test && npm run doc",
     "version": "git add -A",
     "postversion": "git push origin --tags",
     "scss": "node-sass public/scss/import.scss public/css/style.css",
