--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     }
   ],
   "dependencies": {
-    "@chevre/api-nodejs-client": "^1.0.0-alpha.33",
+    "@chevre/api-nodejs-client": "^1.0.0-alpha.41",
     "@movieticket/reserve-api-abstract-client": "^1.0.0",
     "body-parser": "^1.17.2",
     "connect-redis": "^3.4.0",
@@ -27,10 +27,11 @@
     "ejs": "^2.5.2",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
+    "express-flash": "0.0.2",
     "express-session": "^1.15.3",
     "express-validator": "^3.1.3",
     "helmet": "^3.15.0",
-    "http-status": "^1.0.1",
+    "http-status": "^1.3.1",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.23",
     "multer": "^1.4.1",
@@ -47,6 +48,7 @@
     "@types/cors": "^2.8.1",
     "@types/debug": "0.0.29",
     "@types/express": "^4.16.0",
+    "@types/express-flash": "0.0.0",
     "@types/express-partials": "0.0.30",
     "@types/helmet": "0.0.34",
     "@types/http-status": "^0.2.29",
@@ -57,7 +59,7 @@
     "@types/multer": "0.0.33",
     "@types/redis": "^0.12.36",
     "@types/serve-favicon": "^2.2.28",
-    "@types/sinon": "^5.0.5",
+    "@types/sinon": "^5.0.7",
     "@types/supertest": "^2.0.6",
     "@types/underscore": "^1.8.9",
     "@types/validator": "^6.2.0",
@@ -65,11 +67,10 @@
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
     "node-sass": "^4.10.0",
-    "nsp": "^3.2.1",
     "nyc": "^12.0.2",
     "rimraf": "^2.6.1",
     "sinon": "^6.3.5",
-    "snyk": "^1.108.2",
+    "snyk": "^1.110.2",
     "supertest": "^3.3.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
@@ -88,7 +89,7 @@
   "repository": {},
   "scripts": {
     "build": "tsc",
-    "check": "npm run tslint && nsp check",
+    "check": "npm run tslint",
     "clean": "rimraf ./dst ./docs ./coverage \"npm-debug.log*\" ./.nyc_output",
     "doc": "jsdoc -c jsdoc.json",
     "mocha": "mocha",
