### Changed - 勘定科目インターフェースを調整

--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     }
   ],
   "dependencies": {
-    "@chevre/api-nodejs-client": "^1.0.0-alpha.44",
+    "@chevre/api-nodejs-client": "1.0.0-alpha.47",
     "@movieticket/reserve-api-abstract-client": "^1.0.0",
     "body-parser": "^1.17.2",
     "connect-redis": "^3.4.0",
-    "cookie-parser": "^1.4.1",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "debug": "^2.6.8",
     "ejs": "^2.5.2",
@@ -30,15 +30,14 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.3",
     "express-validator": "^3.1.3",
-    "helmet": "^3.15.0",
+    "helmet": "^3.15.1",
     "http-status": "^1.3.1",
-    "moment": "^2.23.0",
+    "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "multer": "^1.4.1",
     "redis": "^2.7.1",
     "serve-favicon": "^2.4.3",
-    "underscore": "^1.8.3",
-    "validator": "^7.0.0"
+    "underscore": "^1.8.3"
   },
   "description": "Chevre Backend Application",
   "devDependencies": {
@@ -47,14 +46,14 @@
     "@types/cookie-parser": "^1.3.30",
     "@types/cors": "^2.8.1",
     "@types/debug": "0.0.29",
-    "@types/express": "^4.16.0",
+    "@types/express": "^4.16.1",
     "@types/express-flash": "0.0.0",
     "@types/express-partials": "0.0.30",
     "@types/helmet": "0.0.34",
     "@types/http-status": "^0.2.29",
     "@types/jquery": "^2.0.53",
     "@types/mime": "0.0.29",
-    "@types/mocha": "^5.2.5",
+    "@types/mocha": "^5.2.6",
     "@types/moment-timezone": "^0.5.10",
     "@types/multer": "0.0.33",
     "@types/redis": "^0.12.36",
@@ -62,7 +61,6 @@
     "@types/sinon": "^5.0.7",
     "@types/supertest": "^2.0.7",
     "@types/underscore": "^1.8.9",
-    "@types/validator": "^6.2.0",
     "ink-docstrap": "^1.3.0",
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
@@ -70,12 +68,11 @@
     "nyc": "^12.0.2",
     "rimraf": "^2.6.3",
     "sinon": "^6.3.5",
-    "snyk": "^1.122.0",
-    "supertest": "^3.3.0",
+    "supertest": "^3.4.2",
     "ts-node": "^7.0.1",
-    "tslint": "^5.12.1",
+    "tslint": "^5.13.0",
     "tslint-microsoft-contrib": "^5.2.1",
-    "typescript": "^3.2.2"
+    "typescript": "^3.3.3333"
   },
   "engines": {
     "node": ">=6.9.1",
