--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-validator": "^3.1.3",
     "helmet": "^3.16.0",
     "http-status": "^1.3.2",
+    "material-dashboard": "^2.1.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "multer": "^1.4.1",
