--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
       "email": "hataguchi@motionpicture.jp"
     },
     {
-      "name": "Mariko Kusunose",
-      "email": "kusunose@motionpicture.jp"
-    },
-    {
       "name": "Tetsu Yamazaki",
       "email": "yamazaki@motionpicture.jp"
     }
@@ -19,7 +15,7 @@
   "dependencies": {
     "@chevre/api-nodejs-client": "1.0.0-alpha.73",
     "@movieticket/reserve-api-abstract-client": "^1.0.1",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "connect-redis": "^3.4.1",
     "cookie-parser": "^1.4.4",
@@ -29,13 +25,13 @@
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
     "express-flash": "0.0.2",
-    "express-session": "^1.16.0",
+    "express-session": "^1.16.1",
     "express-validator": "^3.1.3",
-    "helmet": "^3.16.0",
+    "helmet": "^3.18.0",
     "http-status": "^1.3.2",
     "material-dashboard": "^2.1.0",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.23",
+    "moment-timezone": "^0.5.25",
     "multer": "^1.4.1",
     "redis": "^2.7.1",
     "serve-favicon": "^2.4.3",
@@ -46,8 +42,8 @@
     "@types/body-parser": "0.0.34",
     "@types/connect-redis": "0.0.5",
     "@types/cookie-parser": "^1.3.30",
-    "@types/cors": "^2.8.1",
-    "@types/debug": "^4.1.3",
+    "@types/cors": "^2.8.5",
+    "@types/debug": "^4.1.4",
     "@types/express": "^4.16.1",
     "@types/express-flash": "0.0.0",
     "@types/express-partials": "0.0.30",
@@ -63,16 +59,15 @@
     "@types/sinon": "^5.0.7",
     "@types/underscore": "^1.8.14",
     "ink-docstrap": "^1.3.0",
-    "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "nyc": "^12.0.2",
     "rimraf": "^2.6.3",
     "sinon": "^6.3.5",
     "ts-node": "^7.0.1",
-    "tslint": "^5.15.0",
+    "tslint": "^5.16.0",
     "tslint-microsoft-contrib": "^5.2.1",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.5"
   },
   "engines": {
     "node": ">=6.9.1",
@@ -88,7 +83,7 @@
     "build": "tsc",
     "check": "npm run tslint",
     "clean": "rimraf ./dst ./docs ./coverage \"npm-debug.log*\" ./.nyc_output",
-    "doc": "jsdoc -c jsdoc.json",
+    "doc": "echo \"implementing...\" && exit 0",
     "mocha": "mocha",
     "nyc": "nyc mocha",
     "coverage": "npm run nyc -- \"src/**/*.spec.ts\"",
