--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     }
   ],
   "dependencies": {
-    "@chevre/api-nodejs-client": "1.0.0-alpha.77",
+    "@chevre/api-nodejs-client": "^1.0.0",
     "@movieticket/reserve-api-abstract-client": "^1.1.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
