--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "@chevre/api-nodejs-client": "^1.0.0",
+    "@cinerino/api-nodejs-client": "2.0.0-alpha.54",
     "@json-editor/json-editor": "^1.4.0-beta.0",
     "@movieticket/reserve-api-abstract-client": "^1.1.0",
     "body-parser": "^1.19.0",
