--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     }
   ],
   "dependencies": {
-    "@chevre/api-nodejs-client": "^1.0.0",
+    "@chevre/api-nodejs-client": "2.2.0-alpha.1",
     "@cinerino/api-nodejs-client": "2.0.0-alpha.54",
     "@json-editor/json-editor": "^1.4.0-beta.0",
     "@movieticket/reserve-api-abstract-client": "^1.1.0",
