--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     }
   ],
   "dependencies": {
-    "@chevre/api-nodejs-client": "3.0.0-alpha.8",
+    "@chevre/api-nodejs-client": "3.0.0-alpha.9",
     "@cinerino/api-nodejs-client": "2.0.0-alpha.54",
     "@json-editor/json-editor": "^1.4.0-beta.0",
     "body-parser": "^1.19.0",
@@ -55,6 +55,7 @@
     "@types/mocha": "^5.2.6",
     "@types/moment-timezone": "^0.5.12",
     "@types/multer": "0.0.33",
+    "@types/node": "^8.10.59",
     "@types/redis": "^0.12.36",
     "@types/serve-favicon": "^2.2.28",
     "@types/sinon": "^5.0.7",
@@ -68,7 +69,7 @@
     "ts-node": "^7.0.1",
     "tslint": "^5.16.0",
     "tslint-microsoft-contrib": "^5.2.1",
-    "typescript": "^3.4.5"
+    "typescript": "^3.7.5"
   },
   "engines": {
     "node": ">=6.9.1",
