--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment-timezone": "^0.5.25",
     "multer": "^1.4.1",
     "redis": "^2.7.1",
+    "select2": "^4.0.13",
     "serve-favicon": "^2.4.3",
     "underscore": "^1.8.3"
   },
