--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "connect-redis": "^3.4.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "debug": "^4.1.1",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
@@ -45,6 +46,7 @@
     "@types/connect-redis": "0.0.5",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
+    "@types/csvtojson": "^1.1.5",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.3",
     "@types/express-flash": "0.0.0",
