--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "dependencies": {
     "@chevre/api-nodejs-client": "^3.18.0",
-    "@cinerino/api-nodejs-client": "2.0.0-alpha.101",
+    "@cinerino/sdk": "^1.0.1",
     "@json-editor/json-editor": "^1.4.0-beta.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
