--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     }
   ],
   "dependencies": {
-    "@chevre/api-nodejs-client": "^3.44.1",
-    "@cinerino/sdk": "^1.14.0",
+    "@chevre/api-nodejs-client": "^3.45.1",
+    "@cinerino/sdk": "^1.16.0",
     "@json-editor/json-editor": "^1.4.0-beta.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
@@ -59,6 +59,8 @@
     "@types/multer": "0.0.33",
     "@types/node": "^8.10.59",
     "@types/redis": "^0.12.36",
+    "@types/request": "^2.48.5",
+    "@types/request-promise-native": "^1.0.17",
     "@types/serve-favicon": "^2.5.0",
     "@types/sinon": "^5.0.7",
     "@types/underscore": "^1.9.4",
