--- a/package.json
+++ b/package.json
@@ -102,5 +102,5 @@
     "scss": "node-sass public/scss/import.scss public/css/style.css",
     "public-ts": "webpack --progress --colors --config ./public/webpack.config.js --watch"
   },
-  "version": "2.19.1"
+  "version": "2.20.0-alpha.0"
 }
