--- a/package.json
+++ b/package.json
@@ -100,5 +100,5 @@
     "scss": "node-sass public/scss/import.scss public/css/style.css",
     "public-ts": "webpack --progress --colors --config ./public/webpack.config.js --watch"
   },
-  "version": "2.21.1"
+  "version": "2.22.0-alpha.1"
 }
