--- a/package.json
+++ b/package.json
@@ -100,5 +100,5 @@
     "scss": "node-sass public/scss/import.scss public/css/style.css",
     "public-ts": "webpack --progress --colors --config ./public/webpack.config.js --watch"
   },
-  "version": "2.25.0"
+  "version": "2.26.0-alpha.13"
 }
