--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
+    "google-libphonenumber": "^3.2.21",
     "helmet": "^3.22.0",
     "http-status": "^1.4.2",
     "material-dashboard": "^2.1.0",
@@ -50,6 +51,7 @@
     "@types/express": "^4.17.3",
     "@types/express-flash": "0.0.0",
     "@types/express-partials": "0.0.30",
+    "@types/google-libphonenumber": "^7.4.21",
     "@types/helmet": "0.0.34",
     "@types/http-status": "^0.2.29",
     "@types/jquery": "^2.0.54",
