--- a/package.json
+++ b/package.json
@@ -101,5 +101,5 @@
     "scss": "node-sass public/scss/import.scss public/css/style.css",
     "public-ts": "webpack --progress --colors --config ./public/webpack.config.js --watch"
   },
-  "version": "2.29.1"
+  "version": "2.30.0-alpha.0"
 }
