--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "moment-timezone": "^0.5.28",
     "multer": "^1.4.2",
     "redis": "^2.7.1",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
     "select2": "^4.0.13",
     "serve-favicon": "^2.4.3"
   },
