--- a/package.json
+++ b/package.json
@@ -103,5 +103,5 @@
     "scss": "node-sass public/scss/import.scss public/css/style.css",
     "public-ts": "webpack --progress --colors --config ./public/webpack.config.js --watch"
   },
-  "version": "2.34.0"
+  "version": "2.35.0-alpha.5"
 }
